test/tests/compiler/14_pointers/invalid_types/assign_to_address.plx
pub fn main(none) i32 {
    x: i32 = 0
    @x = 10 #  An address-of expression is not an lvalue, so you can't assign to it 
}
